--- a/Inventory_analysis.ipynb
+++ b/Inventory_analysis.ipynb
@@ -30,17 +30,17 @@
    "outputs": [],
    "source": [
     "# Load files\n",
-    "beg = pd.read_csv('BegInvFINAL12312016 (1).csv')\n",
-    "end = pd.read_csv('EndInvFINAL12312016 (1).csv')\n",
-    "sales = pd.read_csv('SalesFINAL12312016 (1).csv')\n",
-    "invoice = pd.read_csv('InvoicePurchases12312016 (1).csv')\n",
-    "purchase = pd.read_csv('PurchasesFINAL12312016 (1).csv')\n",
-    "price = pd.read_csv('2017PurchasePricesDec (1).csv')"
+    "beg = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\BegInvFINAL12312016 (1).csv')\n",
+    "end = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\EndInvFINAL12312016 (1).csv')\n",
+    "sales = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\SalesFINAL12312016 (1).csv')\n",
+    "invoice = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\InvoicePurchases12312016 (1).csv')\n",
+    "purchase = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\PurchasesFINAL12312016 (1).csv')\n",
+    "price = pd.read_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\2017PurchasePricesDec (1).csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "896dfb8c",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "db8b6e31",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "92971cd4",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "e49a8cb2",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "24eb717b",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "12f139d3",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a79b5705",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "f6acb44b",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "b9cc6442",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "bef80d63",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e3da1416",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "68ee6114",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4a3faa38",
    "metadata": {},
    "outputs": [],
@@ -604,20 +604,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "bd4c530f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1: Merge sales with beginning inventory\n",
-    "master = sales.merge(beg, on=['inventoryid', 'store', 'brand', 'description', 'size'], how='left', suffixes=('', '_begin'))\n",
-    "\n",
-    "\n"
+    "master = sales.merge(beg, on=['inventoryid', 'store', 'brand', 'description', 'size'], how='left', suffixes=('', '_begin'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a34a5ee1",
    "metadata": {},
    "outputs": [],
@@ -642,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "fe68b212",
    "metadata": {},
    "outputs": [],
@@ -770,7 +768,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master.to_csv('cleaned_master_inventory.csv', index=False)\n"
+    "import os\n",
+    "if os.path.exists(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\cleaned_master_inventory.csv'):\n",
+    "  os.remove(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\cleaned_master_inventory.csv')\n",
+    "  print(\"File removed successfully\")\n",
+    "else:\n",
+    "  print(\"The file does not exist\")\n",
+    "  \n",
+    "master.to_csv(r'D:\\Unified_Mentor_Projects\\Inventory_data_analysis_P3\\Data\\cleaned_master_inventory.csv', index=False)\n"
    ]
   },
   {
